# TempestEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake.yml  ubuntu-cmake.yml  windows-cmake.yml
src/: MathEngine.cpp  OpenGL.cpp  Quaternion.cpp  Shader.h  Vector2.h  Vector3.h  Vector4.h  glad.c  stb_image.h
src/core/input/: input_handler.cpp  input_handler.h
src/core/math/: Math.h  Math_defines.h  Matrix.h  Matrix4.h  Matrix_clip_space.h  Matrix_transform.h  Quaternion.h  Trigonometric_functions.h  Vector2.h  Vector3.h  Vector4.h
src/core/modules/: camera.h
src/shaders/: fragmentshader.shader
